--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="col-12 conntenedorsc d-flex align-items-center justify-content-center">
             <div class="container row">
                 <div class="col-12"><h1>BIENVENIDO A NUESTRO ESPACIO CREATIVO</h1></div>
-                <div class="col-12"><h4>En esta pagina encontraras contenido que realizo como productor, Multimedia, ademas de servicios y mi portafolio.</h4></div>
+                <div class="col-12"><h4>En esta pagina encontraras contenido que realizo como Productor Multimedia, ademas de servicios y mi portafolio.</h4></div>
             </div>
         </div>
       </div>
