--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -31,7 +31,7 @@
     </nav>
     <section class="sectiong container">
         <div class="row">
-            <div class="col-md-6 col-12 d-flex justify-content-center align-items-center" style="background-color: salmon;">
+            <div class="col-md-6 col-12 d-flex justify-content-center align-items-center">
                 <img src="assets/img/perfil.jpeg" width="100%" height="100%">
             </div>
             <div class="col-md-6 col-12 container">
