--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -38,7 +38,7 @@
                 <div class="col-12 row">
                     <div class="col-12">
                         <h2 class="textc my-3">¿QUIEN SOY?</h2>
-                        <p class="textc">Soy Daniel Felipe suanca, productor multimedia del SENA.
+                        <p class="textc">Soy Daniel Steven Reyes, productor multimedia del SENA.
                         <br>Me desempeño como una persona sociable comunicativo y honesto</p><br>
                         <p style="margin-left: 5%;">Mis Objetivos:</p>
                             <div class="container">
