--- a/servicios.html
+++ b/servicios.html
@@ -129,11 +129,11 @@
                 <div class="col-md-6 col-12 ">
                     <div class="row ">
                             <div class="col-12 d-flex justify-content-center"><h3>Contáctame</h5></div>
-                            <div class="col-12 d-flex justify-content-center"><p>danielfelifesuanca@gmail.com</p></div>
+                            <div class="col-12 d-flex justify-content-center"><p>Danielstivenreyescubillos@gmail.com</p></div>
                             <div class="col-12 d-flex justify-content-center"><a href="https://www.facebook.com/daniistiven.cubillos/"><p>Facebook</p></a></div>
                             <div class="col-12 d-flex justify-content-center"><a href="https://twitter.com/danielr25974189"><p>Twitter</p></a></div>
                             <div class="col-12 d-flex justify-content-center"><a href="https://www.instagram.com/danii_stiven__/"><p>Instagram</p></a></div>
-                            <div class="col-12 d-flex justify-content-center"><p>+57 310 2650688</p></div>
+                            <div class="col-12 d-flex justify-content-center"><p>+57 322 3144964</p></div>
                         </div>
                 </div>
                 <div class="col-md-12 col-12 bordef" style="padding-top: 20px;"></div>
