--- a/portafolio.html
+++ b/portafolio.html
@@ -31,7 +31,7 @@
       </nav>
 
       <section class="col-12 sectiong container">
-          <h1 class="titulo">Fotografías</h1>
+            <h1 class="titulo">Fotografías</h1>
            <div class="container">
                 <div class="row mt-4">
                     <div class="item col-sm-6 col-md-4 mb-3">
@@ -58,32 +58,89 @@
                 </div>
            </div>
            <!--Modal-->
-            <div class="modal" id="img1">
-                <h3>Butterfly Light</h3>
+           <div class="modal" id="img1">
+            <h3>Butterfly Light</h3>
+            <div class="imagen">
+                <a href="">&nbsp;</a>
+                <img src="assets/img/portafolio/1.jpg">
+                <a href="#img2">></a>
+            </div>
+            <a class="cerrar" href="">X</a>
+        </div>
+
+        <div class="modal" id="img2">
+            <h3>Look de Belleza</h3>
+            <div class="imagen">
+                <a href="#img">&#60;</a>
+                <img src="assets/img/portafolio/2.jpg">
+                <a href="#img3">></a>
+            </div>
+            <a class="cerrar" href="">x</a>
+        </div>
+
+        <div class="modal" id="img3">
+            <h3>Ejercicio de Iluminación</h3>
+            <div class="imagen">
+                <a href="#img2">&#60;</a>
+                <img src="assets/img/portafolio/3.jpeg">
+                <a href="#">&nbsp;</a>
+            </div>
+            <a class="cerrar" href="">x</a>
+        <!--Seccion de Ilustracion-->
+        </div>
+           <h1 class="titulo">Ilustraciones</h1>
+           <div class="container">
+                <div class="row mt-4">
+                    <div class="item col-sm-6 col-md-4 mb-3">
+                        <div class="contenedorh">
+                            <a href="#ilus1" class="fancybox" data-fancy-box="gallery1">
+                                <img src="assets/img/portafolio/ilus.jpeg">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="item col-sm-6 col-md-4 mb-3">
+                        <div class="contenedorh">
+                            <a href="#ilus2" class="fancybox" data-fancy-box="gallery1">
+                                <img src="assets/img/portafolio/ilus2.jpeg">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="item col-sm-6 col-md-4 mb-3">
+                        <div class="contenedorh">
+                            <a href="#ilus3" class="fancybox" data-fancy-box="gallery1">
+                                <img src="assets/img/portafolio/ilus3.jpeg">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+           </div>
+           <!--Modal 2-->
+            <div class="modal" id="ilus1">
+                <h3>Ilutracion: Ventana</h3>
                 <div class="imagen">
-                    <a href="">&nbsp;</a>
-                    <img src="assets/img/portafolio/1.jpg">
-                    <a href="#img2">></a>
+                    <a href="#">&nbsp;</a>
+                    <img class="img2" src="assets/img/portafolio/ilus.jpeg">
+                    <a href="#ilus2">></a>
                 </div>
                 <a class="cerrar" href="">X</a>
             </div>
 
-            <div class="modal" id="img2">
-                <h3>Look de Belleza</h3>
+            <div class="modal" id="ilus2">
+                <h3>Ilutracion: Armario</h3>
                 <div class="imagen">
-                    <a href="#img">&#60;</a>
-                    <img src="assets/img/portafolio/2.jpg">
-                    <a href="#img3">></a>
+                    <a href="#ilus1">&#60;</a>
+                    <img class="img2" src="assets/img/portafolio/ilus2.jpeg">
+                    <a href="#ilus3">></a>
                 </div>
                 <a class="cerrar" href="">x</a>
             </div>
 
-            <div class="modal" id="img3">
-                <h3>Ejercicio de Iluminación</h3>
+            <div class="modal" id="ilus3">
+                <h3>Ilutracion: Escenario</h3>
                 <div class="imagen">
-                    <a href="#img2">&#60;</a>
-                    <img src="assets/img/portafolio/3.jpeg">
-                    <a href="#img4">></a>
+                    <a href="#ilus2">&#60;</a>
+                    <img  class="img2" src="assets/img/portafolio/ilus3.jpeg">
+                    <a href="#">&nbsp;</a>
                 </div>
                 <a class="cerrar" href="">x</a>
             </div>
