--- a/servicios.html
+++ b/servicios.html
@@ -73,7 +73,7 @@
                                         Soluciones a problemáticas de comunicación visual.</p>
                                 </div>
                                 <div class="col-12 item2 textc">
-                                    <button class="mas">CONTENIDO PENDIENTE</button>
+                                    <a href="portafolio.html"><button class="mas">VER CONTENIDO</button></a>
                                 </div>
                             </div>
                         </div>
