--- a/servicios.html
+++ b/servicios.html
@@ -51,7 +51,7 @@
                                     <h2>Fotografía</h2>
                                 </div>
                                 <div class="col-12 item2 textc">
-                                    <p>Hacemos que su conetido en fotografias llame la atención del cliente
+                                    <p>Hacemos que su contenido en fotografias llame la atención del cliente
                                     aplicando correctos angulos planos e iluminacíon.</p>
                                 </div>
                                 <div class="col-12 textc">
